src/tests/snapshots/mu__tests__literals__int.snap
---
source: src/tests/literals.rs
expression: snapshot
---
# Input:
1

# Result (success):
1

# Stdout:


