src/tests/snapshots/mu__tests__literals__none.snap
---
source: src/tests/literals.rs
expression: snapshot
---
# Input:
none

# Result (success):
none

# Stdout:


