src/tests/snapshots/mu__tests__literals__true.snap
---
source: src/tests/literals.rs
expression: snapshot
---
# Input:
true

# Result (success):
true

# Stdout:


